DIC_Coffee.html

--- a/DIC_Coffee.html
+++ b/DIC_Coffee.html
@@ -13,9 +13,9 @@
   <body>
     <header>
       <nav class="header_nav">
-        <a href="DIC Coffee.html" class="logo"><img src="sample_logo_k.png"></a>
+        <a href="DIC_Coffee.html" class="logo"><img src="sample_logo_k.png"></a>
         <ul class="global_nav">
-          <a href="DIC Coffee.html" class="global_nav_item">
+          <a href="DIC_Coffee.html" class="global_nav_item">
             <li>Home</li>
           </a>
           <a href="#menu" class="global_nav_item">
@@ -139,7 +139,7 @@
     <footer class="footer">
         <nav>
           <ul class="footer_nav">
-            <a href="DIC Coffee.html" class="footer_nav_item">
+            <a href="DIC_Coffee.html" class="footer_nav_item">
               <li>Home</li>
             </a>
             <a href="blueberry_pancakes.html" class="footer_nav_item">
@@ -148,7 +148,7 @@
             <a href="contact.html" class="footer_nav_item">
               <li>Contact</li>
             </a>
-            <a href="DIC Coffee.html" class="footer_nav_item">
+            <a href="DIC_Coffee.html" class="footer_nav_item">
               <li>
                 <img src="sample_logo_w.png" class="footer_logo">
               </li>
