--- a/DIC_Coffee.html
+++ b/DIC_Coffee.html
@@ -26,7 +26,7 @@
           </a>
         </ul>
       </nav>
-      <div class="key section_inner2">
+      <div class="key section_inner">
         <h1>DIC Coffee</h1>
         <p>natural organic cafe</p>
       </div>
